# task_gbp

./: README.md  Тестовое задание Python.docx
task1/: main.py  pyproject.toml  test.py  test.txt
task2/: main.py  main_functions.py  pyproject.toml  test.py
task3/: main.py  main_functions.py  pyproject.toml  test.py
task4/: main.py  pyproject.toml  test.py
task5/: main.py  pyproject.toml  test.py
task6/: README  pyproject.toml
task6/app/: main.py  test_main.py
